# Copyright (C) 2005 Andrea Francia <andreafrancia@users.sourceforge.net>
#  
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without 
# modifications, as long as this notice is preserved.
# 
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

AC_INIT([trash],
        [0.0.3],
        [Andrea Francia andreafrancia@users.sourceforge.net],
        [trash])
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE([trash],[0.0.3])
AC_PATH_PROGS(BASH, bash)
AC_PROG_CC
AC_CONFIG_FILES([
   Makefile
   README
   src/Makefile
   version.sh 
])

AC_OUTPUT
