[metadata]
name = trash-cli
version = attr: trashcli.trash.version
author = Andrea Francia
author_email = andrea@andreafrancia.it
url = https://github.com/andreafrancia/trash-cli
description = Command line interface to FreeDesktop.org Trash.
long_description = file: README.rst
license = GPL v2

[options]
packages =
    trashcli
scripts =
    trash
    trash-put
    trash-list
    trash-restore
    trash-empty
    trash-rm

[bdist_rpm]
;; Uncomment if your platform automatically gzips man pages
install_script = install-rpm.sh
doc_files = README.txt

[egg_info]
tag_build =
tag_svn_revision = 1

[aliases]
release = egg_info -RDb ''
