[metadata]
name = trash-cli
version = attr: trashcli.trash.version
author = Andrea Francia
author_email = andrea@andreafrancia.it
url = https://github.com/andreafrancia/trash-cli
description = Command line interface to FreeDesktop.org Trash.
long_description = file: README.rst
license = GPL v2

[options]
packages =
    trashcli
    trashcli.empty
scripts =
    trash
    trash-put
    trash-list
    trash-restore
    trash-empty
    trash-rm
install_requires =
    psutil
    six

[options.extras_require]
completion =
    shtab

[options.data_files]
share/man/man1 =
    man/man1/trash-empty.1
    man/man1/trash-list.1
    man/man1/trash-restore.1
    man/man1/trash.1
    man/man1/trash-put.1
    man/man1/trash-rm.1
