[metadata]
name = trash-cli
version = attr: trashcli.trash.version
author = Andrea Francia
author_email = andrea@andreafrancia.it
url = https://github.com/andreafrancia/trash-cli
description = Command line interface to FreeDesktop.org Trash.
long_description = file: README.rst
license = GPL v2
long_description_content_type = text/x-rst

[options]
packages =
    trashcli
    trashcli.empty
    trashcli.lib
    trashcli.list
    trashcli.list.minor_actions
    trashcli.put
    trashcli.put.core
    trashcli.put.janitor_tools
    trashcli.put.fs
    trashcli.restore
    trashcli.rm
    trashcli.fstab
    trashcli.parse_trashinfo

scripts =
    trash
    trash-put
    trash-list
    trash-restore
    trash-empty
    trash-rm

install_requires =
    psutil
    six
    typing; python_version < '3.8'
    typing_extensions; python_version < '3.8'

[options.extras_require]
completion =
    shtab

[options.data_files]
share/man/man1 =
    man/man1/trash-empty.1
    man/man1/trash-list.1
    man/man1/trash-restore.1
    man/man1/trash.1
    man/man1/trash-put.1
    man/man1/trash-rm.1
